fix alignment of benefits closes #26

--- a/handlers/Culture/components/CultureContent/styles.css
+++ b/handlers/Culture/components/CultureContent/styles.css
@@ -83,9 +83,9 @@
   .CultureContent-benefits-title {
     background: rgba(0, 0, 0, 0.25);
     text-align: center;
-    padding: 13rem 3rem;
+    padding-top: 15rem;
     margin: 0;
-    vertical-align: middle;
+    width: 300px;
   }
 
   .CultureContent-benefits-list {
